# control-math-webserver

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
scripts/: export-poetry.ps1  export-poetry.sh
src/: main.py
src/models/: control_systems.py
src/routers/: control.py
tests/: test_something.py
