[tool.poetry]
name = "control-math-webserver"
version = "0.1.0"
description = ""
authors = ["Viacheslav Ponomarev <viacheslav.ponomarev.0@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
uvicorn = "^0.30.6"
colorama = "^0.4.6"
control = "^0.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pre-commit = "^3.7.1"
mypy = "^1.10.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-custom-exit-code = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
